Cart sidebar and auth modal customized

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,18 @@
         margin: 0 auto;
         padding: 0 15px;
       }
+      ::-webkit-scrollbar {
+        width: 10px;
+      }
+      ::-webkit-scrollbar-track {
+        background: #f1f1f1;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #888;
+      }
+      ::-webkit-scrollbar-thumb:hover {
+        background: #555;
+      }
     </style>
     <title>iStore</title>
   </head>
